objects/Astonous_SM__Shipment_Configuration__mdt.object
<CustomObject>
    <description>Configuration of object that store Shipment Tracking numbers</description>
    <fields>
        <fullName>Astonous_SM__Delivery_Date_Field__c</fullName>
        <inlineHelpText>API Name of field which store Delivery Date</inlineHelpText>
        <label>Delivery Date Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Object_Name__c</fullName>
        <description>API Name of object to stamp tracking updates</description>
        <inlineHelpText>API Name of object to stamp tracking updates</inlineHelpText>
        <label>Object Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipping_Carrier_Field__c</fullName>
        <label>Shipping Carrier Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Tracking_Number_Field__c</fullName>
        <description>Field API name that store tracking number</description>
        <inlineHelpText>Field API name that store tracking number</inlineHelpText>
        <label>Tracking Number Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Tracking_Status_Field__c</fullName>
        <description>Field API name to capture Status</description>
        <inlineHelpText>Field API name to capture Status</inlineHelpText>
        <label>Tracking Status Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Tracking_Status_Information_Field__c</fullName>
        <inlineHelpText>API Name of Shipment Tracking status description field. Field store more details of Status that are returned from shipping carrier.</inlineHelpText>
        <label>Tracking Status Information Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Shipment Configuration</label>
    <pluralLabel>Shipment Configurations</pluralLabel>
</CustomObject>